# lingmo-controls

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: abi.yml  build.yml  package.yml  test.yml
cmake/: LingmoCompilerSettings.cmake  LingmoControlsConfig.cmake.in  LingmoPCH.cmake  LingmoSanitizers.cmake
debian/: changelog  control  lingmo-controls-dev.install  lingmo-controls.install  qml6-module-lingmo-controls.install  rules
docs/: API.md
examples/: CMakeLists.txt
examples/controls-gallery/: CMakeLists.txt  main.cpp  main.qml
include/LingmoControls/: LingmoControls.h  LingmoControlsExport.h.in  LingmoControlsVersion.h.in
qml/Lingmo/Controls/: BusyIndicator.qml  Button.qml  CheckBox.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  GroupBox.qml  Menu.qml  PageIndicator.qml  ProgressBar.qml  RadioButton.qml  RangeSlider.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  Tumbler.qml  qmldir
rpm/: lingmo-controls.spec
src/: CMakeLists.txt
src/LingmoControls/: LingmoControlsPlugin.cpp
tests/: CMakeLists.txt  main.cpp  tst_Button.qml  tst_ComboBox.qml  tst_QmlImport.qml  tst_RangeSlider.qml  tst_TabBar.qml  tst_TextField.qml
